added demo to menu with header

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -33,7 +33,7 @@
         <ion-item menu-close href="#/app/aboutUs">
           About Us
         </ion-item>
-        <ion-item menu-close href="#/demo">
+        <ion-item menu-close href="#/app/demo">
           Demo
         </ion-item>
       </ion-list>
