--- a/www/templates/demo.html
+++ b/www/templates/demo.html
@@ -19,10 +19,10 @@
 </div>
 </ion-content>
 </ion-view>-->
-<ion-view view-title="Choose Your Business-Demo">
+
   
 <!-- <ion-view view-title="Demo" class="list pane" ng-init="vm.init()"> -->
-<ion-content>
+
 <!--<ion-slide-box on-slide-changed="slideHasChanged($index)">
   <ion-slide>
     <div class="box blue"><img src="img/1.jpg" width="100%"></div>
@@ -61,7 +61,23 @@
 </button>
 </div>
 </div> -->
-<div class="box">
+
+
+
+ <ion-view view-title="Choose Your Business-Demo">
+<ion-content>
+<div class="div1">
+    <div class="box"> <img src="img/1.jpg"><a href="#" class="button-clear button-positive centerbtn" style="color:#fff">
+  Super Market
+</a> </div>
+  <div class="box"> <img src="img/2.jpg"><a href="#" class=" button-clear button-positive centerbtn" style="color:green">
+  Electronics
+</a> </div>
+  <div class="box"> <img src="img/3.jpg"><a href="#" class="button-clear button-positive centerbtn" style="color:#F00">
+  Jewellery
+</a> </div>
+</div>
+<!-- <div class="box">
 <img src="img/1.jpg" style="width:100%;">
 <button class="button button-clear button-positive centerbtn" style="color:#fff">
   Super Market
@@ -78,32 +94,12 @@
 <button class="button button-clear button-positive centerbtn" style="color:#fff">
   Jewellery
 </button>
-</div>
+</div> -->
 </ion-content>
-</ion-view>
- 
-<style type="text/css">
-/*.pane{
-background:url('http://tutorialsplane.com/wp-content/uploads/2016/02/1511516_1035103706511033_695479665952545706_n.jpg') no-repeat center center fixed; 
-        -webkit-background-size: 30%;
-        -moz-background-size: 30%;
-        background-size: 30%;
-}*/
-.demopage{
-  margin-top: 30%;
-}
-.slider {
-  height: 30%;
-}
-.centerbtn{
-  position: absolute;
-    width: 100%;
-    top: 50%;
-    z-index: 999;
-    margin-top: -20px;
-}
-.box{
-  position: relative;
-}
+</ion-view> 
 
-</style>
+
+
+
+
+ 
