demo screen modification

--- a/www/templates/demo.html
+++ b/www/templates/demo.html
@@ -67,14 +67,14 @@
  <ion-view view-title="Choose Your Business-Demo">
 <ion-content>
 <div class="div1">
-    <div class="box"> <img src="img/1.jpg"><a href="#" class="button-clear button-positive centerbtn" style="color:#fff">
-  Super Market
+    <div class="box"> <img src="img/1old.jpg"><a href="#" class="button-clear button-positive centerbtn">
+  <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Super Market</h1>
 </a> </div>
-  <div class="box"> <img src="img/2.jpg"><a href="#" class=" button-clear button-positive centerbtn" style="color:green">
-  Electronics
+  <div class="box"> <img src="img/2old.jpg"><a href="#" class=" button-clear button-positive centerbtn">
+  <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Furniture</h1>
 </a> </div>
-  <div class="box"> <img src="img/3.jpg"><a href="#" class="button-clear button-positive centerbtn" style="color:#F00">
-  Jewellery
+  <div class="box"> <img src="img/3old.jpg"><a href="#" class="button-clear button-positive centerbtn">
+  <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Jewellery</h1>
 </a> </div>
 </div>
 <!-- <div class="box">
