Change bar style

--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -12,11 +12,11 @@
                     </div>
                 </ion-slide>
             </ion-slide-box>
-           <div ng-bind-html="vm.productDetail.description"></div>
-            <br>
+           <div class="item item-text-wrap" ng-bind-html="vm.productDetail.description"></div>
+            <!-- <br> -->
         </div>
     </ion-content>
-    <div class="bar bar-footer bar-positive">
+    <div class="bar bar-footer bar-calm">
         <a class="tab-item" ng-click="vm.previous()">
             <i class="icon ion-ios-arrow-left"></i> Previous
         </a>
