--- a/www/templates/productLists.html
+++ b/www/templates/productLists.html
@@ -6,10 +6,14 @@
     <img cache-src="{{vm.imageUrl + itm.imageUrl[0]}}"/>
       <h2>{{itm.name}}</h2>
       <p style="margin-right: 25%;">{{itm.description}}</p>
-      <div class="buttons item-button-right">
-              <button class="button button-balanced icon"> $ 4.5 </button>
-              
-            </div>
+      <!-- <p class="pricing"> 34 AED</p> -->
+       <div class="buttons item-button-right">
+              <button class="button  icon"> $ 4.5 </button> 
+              <button class="button button-assertive  pad icon"> offer </button>             
+            </div> 
+            <!-- <div class="buttons item-button-right pad">
+                            
+            </div>  -->
     </a>
 
 
