--- a/www/templates/demo.html
+++ b/www/templates/demo.html
@@ -67,7 +67,8 @@
  <ion-view view-title="Choose Your Business-Demo">
 <ion-content>
 <div class="div1">
-    <div class="box"> <img src="img/1old.jpg"><a href="#" class="button-clear button-positive centerbtn">
+    <div class="box" ng-click="vm.showFurniture()"> <img src="img/1old.jpg">
+    <a href="#" class="button-clear button-positive centerbtn">
   <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Super Market</h1>
 </a> </div>
   <div class="box"> <img src="img/2old.jpg"><a href="#" class=" button-clear button-positive centerbtn">
