Demoes are listed properly

--- a/www/templates/demo.html
+++ b/www/templates/demo.html
@@ -1,101 +1,23 @@
-<!--<ion-view view-title="Demo">
-  <ion-content>
-  <div class="list card">
-  	<div class="item ">
-    <h2>Choose Your Business-Demo</h2>
-  </div>
-  	<div class="item item-text-wrap">
-
-<button class="button button-full button-positive" ng-click="vm.showFurniture()">
-  Furniture
-</button>
-<button class="button button-full button-positive" ng-click="vm.showSuperMarket()">
-  Super market
-</button>
-<button class="button button-full button-positive" ng-click="vm.showJewellery()">
-  Jewellery
-</button>
-</div>
-</div>
-</ion-content>
-</ion-view>-->
-
-  
-<!-- <ion-view view-title="Demo" class="list pane" ng-init="vm.init()"> -->
-
-<!--<ion-slide-box on-slide-changed="slideHasChanged($index)">
-  <ion-slide>
-    <div class="box blue"><img src="img/1.jpg" width="100%"></div>
-  </ion-slide>
-  <ion-slide>
-    <div class="box yellow"><img src="img/2.jpg" width="100%"></div>
-  </ion-slide>
-  <ion-slide>
-    <div class="box pink"><img src="img/3.jpg" width="100%"></div>
-  </ion-slide>
-</ion-slide-box>
-<button class="button button-full button-royal" style="height:33%;margin-top: 0;">
-  Choose Your Business-Demo
-</button><button class="button button-full button-royal" style="height:33%;margin-top: 0;">
-  Choose Your Business-Demo
-</button><button class="button button-full button-royal" style="height:33%;margin-top: 0;">
-  Choose Your Business-Demo
-</button>
-     <ion-content class="demopage">
-  
-</ion-content> -->
-<!-- <button class="button button-full button-royal" style="margin-top: 0;">
-  Choose Your Business-Demo
-</button>
-<div class="list card">
-    <div class="item item-text-wrap">
-
-<button class="button button-full button-positive">
-  Furniture
-</button>
-<button class="button button-full button-positive">
-  Super market
-</button>
-<button class="button button-full button-positive">
-  Jewellery
-</button>
-</div>
-</div> -->
-
-
-
- <ion-view view-title="Choose Your Business-Demo">
+<ion-view view-title="Choose Your Business-Demo">
 <ion-content>
 <div class="div1">
-    <div class="box" ng-click="vm.showFurniture()"> <img src="img/1old.jpg">
-    <a href="#" class="button-clear button-positive centerbtn">
-  <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Super Market</h1>
-</a> </div>
-  <div class="box"> <img src="img/2old.jpg"><a href="#" class=" button-clear button-positive centerbtn">
-  <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Furniture</h1>
-</a> </div>
-  <div class="box"> <img src="img/3old.jpg"><a href="#" class="button-clear button-positive centerbtn">
-  <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Jewellery</h1>
-</a> </div>
+  <div class="box" ng-click="vm.showFurniture()"> <img src="img/1old.jpg">
+    <a  class="button-clear button-positive centerbtn">
+      <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Super Market</h1>
+    </a>
+  </div>
+  <div class="box" ng-click="vm.showSuperMarket()"> <img src="img/2old.jpg">
+    <a class=" button-clear button-positive centerbtn">
+      <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Furniture</h1>
+    </a>
+  </div>
+  <div class="box" ng-click="vm.showJewellery()"> <img src="img/3old.jpg">
+  <a class="button-clear button-positive centerbtn">
+    <h1 style="color:#fff;text-shadow: 5px 3px 5px #000;">Jewellery</h1>
+</a>
+ </div>
 </div>
-<!-- <div class="box">
-<img src="img/1.jpg" style="width:100%;">
-<button class="button button-clear button-positive centerbtn" style="color:#fff">
-  Super Market
-</button>
-</div>
-<div class="box">
-<img src="img/2.jpg" style="width:100%;">
-<button class="button button-clear button-positive centerbtn" style="color:#fff">
-  Electronics
-</button>
-</div>
-<div class="box">
-<img src="img/3.jpg" style="width:100%;">
-<button class="button button-clear button-positive centerbtn" style="color:#fff">
-  Jewellery
-</button>
-</div> -->
+
 </ion-content>
 </ion-view> 
 
