--- a/www/templates/productLists.html
+++ b/www/templates/productLists.html
@@ -6,22 +6,10 @@
 
     <img cache-src="{{vm.imageUrl + itm.imageUrl[0]}}"/>
       <h2>{{itm.name}}</h2>
-        <img height="40px" style="float:right;position:top;" src="img/special-offer.jpg">
+        <img height="40px"  ng-show="itm.showOffer" style="float:right;position:top;" src="img/special-offer.jpg">
       <p style="margin-right: 25%;">{{itm.description}}</p>
-      <!-- <p class="pricing"> 34 AED</p> -->
-       <!-- <div class="buttons item-button-right"> -->
-              <button class="button  icon"> AED 4.5 </button> 
-             <!--  <button class="button button-assertive  pad icon"> offer </button>  -->     
-
-
-            <!-- </div>  -->
-        
-
+              <button class="button  icon"> AED {{itm.unitPrice}} </button> 
     </a>
-
-
-
-
 </div>
   </ion-content>
 </ion-view>
