--- a/www/templates/userRegister.html
+++ b/www/templates/userRegister.html
@@ -7,11 +7,11 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Email</span>
-          <input type="text" ng-model="vm.email">
+          <input type="text" ng-model="vm.userReg.email" required>
         </label>
         <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="password" ng-model="vm.password">
+          <span class="input-label" >Password</span>
+          <input type="password" ng-model="vm.userReg.password" required>
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Register</button>
