WIP: User-registration

--- a/www/templates/userRegister.html
+++ b/www/templates/userRegister.html
@@ -14,7 +14,7 @@
           <input type="password" ng-model="vm.userReg.password" required>
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Register</button>
+          <button class="button button-block button-positive" ng-click="vm.submitUserRegistration()">Register</button>
       </div>
     </form>
 
