--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,7 +6,7 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="vm.doLogin()">
+    <form ng-submit="vm.doLogin()" ng-show="!vm.loggedIn">
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Username</span>
@@ -22,8 +22,15 @@
       </div>
     </form>
 
-    <label class="item">
-          <button class="button button-block button-balanced" ng-click="vm.registration()" >New User Register Here!</button>
-        </label>
+    <label class="item" ng-show="!vm.loggedIn">
+          <button class="button button-block button-balanced" ng-click="vm.registration()" 
+           >New User Register Here!</button>
+    </label>
+
+    <label class="item" ng-show="vm.loggedIn">
+          <button class="button button-block button-balanced" ng-click="vm.logout()" 
+           >Log Out!</button>
+    </label>
+
   </ion-content>
 </ion-view>
