--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -10,14 +10,14 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username" required>
+          <input type="text" ng-model="vm.loginData.username" required>
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password" required>
+          <input type="password" ng-model="vm.loginData.password" required>
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
+          <button class="button button-block button-positive">Log in</button>
        
       </div>
     </form>
