Arranged Menu and Purchase History section added

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,17 +21,23 @@
        <ion-item menu-close href="#/app/products/0">
           Promotions
         </ion-item>
-        <ion-item menu-close ng-repeat="itm in categories" href='#/app/products/{{progId}}/{{itm.id}}'>
-          {{itm.name}}
-        </ion-item>
         <ion-item menu-close href="#/app/login">
-          Login
+          My Account
+        </ion-item>
+         <ion-item menu-close href="#/app/checkout">
+          Cart Items
+        </ion-item> 
+        <ion-item menu-close href="#/app/purchaseHistory">
+          Purchase History
         </ion-item>
         <ion-item menu-close href="#/app/search">
           Search
         </ion-item>
         <ion-item menu-close href="#/app/aboutUs">
           About Us
+        </ion-item>
+        <ion-item menu-close ng-repeat="itm in categories" href='#/app/products/{{progId}}/{{itm.id}}'>
+          {{itm.name}}
         </ion-item>
         <ion-item menu-close href="#/app/demo">
           Demo
