WIP: Checkout page

--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -9,7 +9,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <p>Pure wood(Description)</p>
+                    <p>{{itm.product.description}}</p>
                 </div>
                 <div class="row row-center">
                     <div class="col">
