Fixed promotion link

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,7 +18,7 @@
     </ion-header-bar>
     <ion-content ng-controller="appCtrl as vm" ng-init="vm.init()">
       <ion-list>
-       <ion-item menu-close href="#/app/products/0">
+       <ion-item menu-close href="#/app/products/{{progId}}/0">
           Promotions
         </ion-item>
         <ion-item menu-close href="#/app/login">
