--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -25,7 +25,7 @@
                     	<button class="button button-icon icon ion-ios-information" ng-click="vm.showProduct(itm.id)"></button>
                     </div>
                     <div class="col">
-                    	<button class="button button-icon icon ion-ios-trash-outline" ng-click="vm.removeProduct(itm.id)"></button>
+                    	<button class="button button-icon icon ion-ios-trash-outline" ng-click="vm.removeProduct(itm.orderId)"></button>
                     </div>
                 </div>
             </a>
