--- a/www/templates/shippingInfo.html
+++ b/www/templates/shippingInfo.html
@@ -1,160 +1,60 @@
-
-<ion-view view-title="Shipping info" >
-<ion-content>
-<div class="list">
-<div class="item item-divider">
-    Shipping info
-  </div>
-  <label class="item item-input item-select">
-    <div class="input-label">
-      Mode of Payment
+<ion-view view-title="Shipping info">
+    <ion-content>
+        <div class="list">
+            <div class="item item-divider">
+                Delivary Addr. info
+            </div>
+            <label class="item item-input item-select">
+                <div class="input-label">
+                    Mode of Pay
+                </div>
+                <select>
+                    <option selected>Cash On Delivary - COD</option>
+                </select>
+            </label>
+            <div class="item item-divider">
+                Shipping Address
+            </div>
+            <div class="card">
+                <label class="item item-input item-select">
+                    <div class="input-label">
+                        Title
+                    </div>
+                    <select>
+                        <option selected>Mr</option>
+                        <option>Mrs</option>
+                    </select>
+                </label>
+                <label class="item item-input">
+                    <input type="text" placeholder="First Name">
+                </label>
+                 <!--ANOTHER TYPE-->
+                <!--END-->
+                <label class="item item-input">
+                    <input type="text" placeholder="Last Name">
+                </label>
+                 <label class="item item-input">
+                    <input type="number" placeholder="Mobile Number">
+                </label>
+                <label class="item item-input">
+                    <input type="number" placeholder="Landline">
+                </label>
+                <label class="item item-input">
+                    <input type="text" placeholder="Street Address 1">
+                </label>
+                <label class="item item-input">
+                    <input type="text" placeholder="Street Address 2">
+                </label>
+                <label class="item item-input">
+                    <input type="text" placeholder="City">
+                </label>
+                 <label class="item item-input">
+                    <input type="number" placeholder="Post Box">
+                </label>
+            </div>
+        </div>
+    </ion-content>
+    <div class="bar bar-footer bar-balanced">
+        <div class="title">Footer</div>
     </div>
-    <select>
-      <option selected>Cash On Delivary - COD</option>
-      <option>Credit Card</option>
-      <option>Paypal</option>
-    </select>
-  </label>
-  <ion-checkbox ng-model="filter.red">Shipping & Billing address same</ion-checkbox>
- 
-
-  <!--  <div class="item item-input-inset">
-      <div class="input-label">
-      <select id="tag1">
-      <option>Mr</option>
-      <option selected>Mrs</option>
-      </select>
-      </div><input type="text">
-    
-  </div> 
-     -->
-  <!-- <ion-list>
-    <div class="item-input-inset">
-    <label class="item item-input item-select">
-    <div class="input-label">
-      Title
-    </div>
-    <select>
-      <option selected>Mr</option>
-      <option>Mrs</option>
-    </select>
-  </label>
-      <div>
-        <label class="item item-input">
-          <input placeholder="Identificación" name="identificacion" type="text">
-        </label>
-      </div>
-      
-    </div>
-  </ion-list> -->
-
-
-<div class="item item-divider">
-    Shipping Address
-  </div>
-  <div class="card">
- <label class="item item-input item-select">
-    <div class="input-label">
-    Title
-    </div>
-    <select>
-      <option selected>Mr</option>
-      <option>Mrs</option>
-    </select>
-  </label>
-
-
-    <label class="item item-input">
-    <input type="text" placeholder="First Name">
-  </label>
-<!--ANOTHER TYPE-->
-
-<!-- <div class="row">
-  <div class="col">
-  <label class="item item-input item-select">
-    <div class="input-label">
-    Title
-    </div>
-    <select>
-      <option selected>Mr</option>
-      <option>Mrs</option>
-    </select>
-  </label>
-  </div>
-  <div class="col">
-   <label class="item item-input">
-    <input type="text" placeholder="First Name">
-  </label>
-  </div>
-</div> -->
-
-<!--END-->
-  <label class="item item-input">
-    <input type="text" placeholder="Last Name">
-  </label>
-  <label class="item item-input">
-  <input type="number" placeholder="Mobile Number">
-</label>
-<label class="item item-input">
-  <input type="number" placeholder="Landline">
-</label>
-
-<label class="item item-input">
-    <input type="text" placeholder="Street Address 1">
-  </label>
-<label class="item item-input">
-    <input type="text" placeholder="Street Address 2">
-  </label>
-<label class="item item-input">
-    <input type="text" placeholder="City">
-  </label>
-<label class="item item-input">
-    <input type="text" placeholder="State">
-  </label>
-<label class="item item-input">
-    <input type="text" placeholder="Country">
-  </label>
-<label class="item item-input">
-  <input type="number" placeholder="Post Box">
-  </label>
-
-<div class="item item-divider">
-    Billing Address
-  </div>
-
-</div>
-
-
-
-
-
-
-<!-- <h1>Shipping info</h1>
-<h2>Mode of Payment </h2>
-<ul>
-<li>Cash On Delivary - COD</li>
-<li>Credit Card</li>
-<li>Paypal</li>
-</ul>
-
-<h2>Checkbox - Is Shipping & Billing address same?</h2>
-
-<h2>Title</h2>
-<ul>
-	<li>Mr.</li>
-	<li>Mrs.</li>
-</ul>
-
-<h2>First Name</h2>
-<h2>Last Name</h2>
-<h2>Mobile No</h2>
-<h2>Landline</h2>
-<h2>Street Address 1</h2>
-<h2>Street Address 2</h2>
-<h2>City</h2>
-<h2>State</h2>
-<h2>Country</h2>
-<h2>Post Box</h2> -->
-
-</ion-content>
 </ion-view>
