--- a/www/templates/shippingInfo.html
+++ b/www/templates/shippingInfo.html
@@ -28,12 +28,12 @@
                 <label class="item item-input">
                     <input type="text" placeholder="First Name">
                 </label>
-                 <!--ANOTHER TYPE-->
+                <!--ANOTHER TYPE-->
                 <!--END-->
                 <label class="item item-input">
                     <input type="text" placeholder="Last Name">
                 </label>
-                 <label class="item item-input">
+                <label class="item item-input">
                     <input type="number" placeholder="Mobile Number">
                 </label>
                 <label class="item item-input">
@@ -48,13 +48,15 @@
                 <label class="item item-input">
                     <input type="text" placeholder="City">
                 </label>
-                 <label class="item item-input">
+                <label class="item item-input">
                     <input type="number" placeholder="Post Box">
                 </label>
             </div>
         </div>
     </ion-content>
     <div class="bar bar-footer bar-balanced">
-        <div class="title">Footer</div>
+        <button style="margin:0" class="button button-full button-positive" ng-click="vm.sendOrderToProcess()">
+            Place your Order
+        </button>
     </div>
 </ion-view>
