Minor Corrections of headings

--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Checkout" ng-init="vm.init()">
+<ion-view view-title="Cart Items" ng-init="vm.init()">
     <ion-content>
         <div class="list">
             <a class="item item-avatar" ng-repeat="itm in vm.productsCheckedOut track by $index">
