--- a/www/templates/shippingInfo.html
+++ b/www/templates/shippingInfo.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Shipping info">
+<ion-view view-title="Check Out">
     <ion-content>
         <div class="list">
             <div class="item item-divider">
