order history in progress

--- a/www/templates/purchaseHistory.html
+++ b/www/templates/purchaseHistory.html
@@ -2,7 +2,9 @@
     <ion-content>
         <ion-list>
             <ion-item ng-repeat="itm in vm.orderList">
-                Hello, {{itm.status}}!
+                Date: {{itm.createdDateTime}} 
+<br/>
+                Status: {{itm.status}}!
             </ion-item>
         </ion-list>
         </div>
