--- a/www/templates/purchaseHistory.html
+++ b/www/templates/purchaseHistory.html
@@ -3,8 +3,9 @@
         <ion-list>
             <ion-item ng-repeat="itm in vm.orderList">
                 Date: {{itm.createdDateTime}} 
-<br/>
-                Status: {{itm.status}}!
+				<br/>
+                <!-- Status: {{itm.status}}! -->
+                {{vm.test}}
             </ion-item>
         </ion-list>
         </div>
