--- a/www/templates/orderDetail.html
+++ b/www/templates/orderDetail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Order Detials" >
+<ion-view view-title="Order Detials" ng-init="vm.init()" >
     <ion-content>
     <h2>Details here</h2>
     </ion-content>
