--- a/www/templates/productLists.html
+++ b/www/templates/productLists.html
@@ -1,33 +1,19 @@
 <ion-view view-title="Products" ng-init="vm.init()">
   <ion-content>
   <ion-list>
-    <ion-item ng-repeat="itm in vm.products" item="itm">
-      <h2>{{itm.name}}</h2>
-    </ion-item>
-  </ion-list>
-
-   <ion-infinite-scroll
-    on-infinite="vm.loadMore()"
-    distance="1%">
-    </ion-infinite-scroll>
-  </ion-content>
-  </ion-content>
-</ion-view>
-
-
-<!-- <ion-view view-title="Products" ng-init="vm.init()">
-  <ion-content>
-  <div class="list" ng-show="!vm.isProductListEmpty">
-
-    <a class="item item-avatar" ng-repeat="itm in vm.products.content track by $index" href="#/app/productDetails/{{itm.id}}">
-
+    <ion-item ng-repeat="itm in vm.products" item="itm" href="#/app/productDetails/{{itm.id}}">
     <img cache-src="{{vm.imageUrl + itm.imageUrl[0]}}"/>
       <h2>{{itm.name}}</h2>
         <img height="40px"  ng-show="itm.showOffer" style="float:right;position:top;" src="img/special-offer.jpg">
         <p style="margin-right: 25%;">{{itm.description}}</p>
         <button ng-show="itm.unitPrice" class="button  icon"> AED {{itm.unitPrice}} </button> 
-    </a>
-</div>
+    </ion-item>
+  </ion-list>
+
+   <ion-infinite-scroll
+    on-infinite="vm.loadMore()"
+    distance="1%"
+    ng-if="vm.moreDataCanBeLoaded()">
+    </ion-infinite-scroll>
   </ion-content>
 </ion-view>
- -->
