--- a/www/templates/shippingInfo.html
+++ b/www/templates/shippingInfo.html
@@ -55,7 +55,7 @@
         </div>
     </ion-content>
     <div class="bar bar-footer bar-balanced">
-        <button style="margin:0" class="button button-full button-positive" ng-click="vm.sendOrderToProcess()">
+        <button style="margin:0" class="button button-full button-positive" ng-click="vm.showConfirm()">
             Place your Order
         </button>
     </div>
