--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -10,7 +10,7 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Username</span>
-          <input type="text" ng-model="vm.loginData.username" required>
+          <input type="text" ng-model="vm.loginData.username" ng-minlength="5" ng-maxlength="20" required type="email">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
@@ -18,7 +18,6 @@
         </label>
         <label class="item">
           <button class="button button-block button-positive">Log in</button>
-       
       </div>
     </form>
 
