WIP: order details

--- a/www/templates/orderDetail.html
+++ b/www/templates/orderDetail.html
@@ -8,19 +8,29 @@
                 <i class="icon ion-clock"></i> 
                 A minute ago
             </a>
+          <!--   <a href="#" class="item item-icon-left">
+                <i class="icon ion-edit"></i>
+			<button class="button button-outline button-dark">
+			  Edit Order
+			</button>
+            </a> -->
             <a href="#" class="item item-icon-left">
-                <i class="icon ion-edit"></i> Edit My Order
+                <i class="icon ion-android-cancel assertive"></i>
+                <button class="button button-outline button-assertive">
+			  Cancel Order
+			</button>
             </a>
             <a href="#" class="item item-icon-left">
-                <i class="icon ion-android-cancel"></i> Cancel My Order
-            </a>
-            <a href="#" class="item item-icon-left">
-                <i class="icon ion-android-hand"></i>
+                <i class="icon ion-android-hand royal"></i>
+                 <button class="button button-outline button-royal">
                 Waiting for Long - Not Happy
+                </button>
             </a>
             <a href="#" class="item item-icon-left">
-                <i class="icon ion-ios-telephone"></i>
+                <i class="icon ion-ios-telephone balanced"></i>
+                <button class="button button-outline button-balanced">
                 Call Us
+                </button>
             </a>
         </div> 
         <div class="list card" ng-show="vm.status === 'DELIVERED'">
