--- a/www/templates/orderDetail.html
+++ b/www/templates/orderDetail.html
@@ -27,7 +27,7 @@
                     Waiting for Long - Not Happy
                 </button>
             </a>
-            <a href="#" class="item item-icon-left">
+            <a href="tel:+9715404488"  class="item item-icon-left">
                 <i class="icon ion-ios-telephone balanced"></i>
                 <button class="button button-outline button-balanced">
                     Call Us
