--- a/www/css/style.css
+++ b/www/css/style.css
@@ -111,3 +111,21 @@ input.ng-valid {
      border-bottom: 1px solid lightgreen; 
 }
 /*end of validation styles*/
+
+.product-list-item-left
+{
+      border: chocolate;
+    border-left-style: double;
+    padding-left: 20px;
+}
+
+.product-list-item-img
+{
+  height: 120px;
+    padding-left: 10px;
+}
+
+.product-list .row img
+{
+  min-height: 120px;
+}
